# language-selector

./: .gitignore  10language-selector  Makefile.am  autogen.sh  configure.ac  setlocale
debian/: changelog  control  language-selector.install  postinst  rules
src/: Makefile.am  language-selector.c
themes/: Makefile.am  language-selector.edc  language-selector.edj
