bin_PROGRAMS = language-selector
language_selector_SOURCES = language-selector.c

AM_CFLAGS = -Wall

INCLUDES = @EVAS_CFLAGS@ @ECORE_CFLAGS@ @ECORE_EVAS_CFLAGS@ @EDJE_CFLAGS@ @ECHOICEBOX_CFLAGS@ @LIBLANGUAGE_CFLAGS@
language_selector_LDFLAGS = @EVAS_LIBS@ @ECORE_LIBS@ @ECORE_EVAS_LIBS@ @EDJE_LIBS@ @ECHOICEBOX_LIBS@ @LIBLANGUAGE_LIBS@
